# ghcjs-promise-examples

./: .gitignore  Makefile  README.md  ghcjs-promise-examples.cabal  stack.yaml
html/: battery.html  meaning-life.html
src/hs/: Battery.hs  MeaningOfLifeApp.hs
src/js/: best_ui_ever.js
